<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weathy</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="content_authority">com.example.android.weathy</string>
    <string name="open_weather_maps_app_id">11111</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>

    <string name="celcius_format">°C</string>
    <string name="fahrenheit_format">°F</string>

    <string name="errorMessage">An error has occurred. Please click Refresh</string>

    <!-- Strings for Settings preferences -->
    <string name="location_title">Location</string>
    <string name="location_key">location</string>
    <string name="location_default">Jabotinsky 15, Tel-Aviv, 25425, Israel</string>

    <string name="units_title">Temperature Units</string>
    <string name="units_key">units</string>
    <string name="units_metric">Metric</string>
    <string name="units_metric_key">metric</string>
    <string name="units_imperial">Imperial</string>
    <string name="units_imperial_key">imperial</string>

    <string name="notification_key">notifications_enable</string>
    <string name="notification_true">enabled</string>
    <string name="notification_false">disable</string>
    <string name="notification_title">Weathy Notifications</string>
    <string name="notification_format">Notification Format</string>
    <string name="last_notification">last_notification</string>
    <string name="format_notification">
        Forecast:<xliff:g id="condition">%1$s</xliff:g> -
        High:<xliff:g id="high">%2$s</xliff:g>
        Low:<xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Temperature format -->
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <string name="wind_title">Wind</string>
    <!-- Wind in kph -->
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in mph -->
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="pressure_title">Pressure</string>
    <!-- Pressure format -->
    <string name="format_pressure">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <string name="humidity_title">Humidity</string>
    <!-- Humidity format -->
    <string name="format_humidity">
        <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>

    <!-- Accessibility -->

    <string name="access_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="access_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="access_temp_high">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="access_temp_low">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="access_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="access_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="access_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_200">Thunderstorm with Light Rain</string>
    <string name="condition_201">Thunderstorm with Rain</string>
    <string name="condition_202">Thunderstorm with Heavy Rain</string>
    <string name="condition_210">Light Thunderstorm</string>
    <string name="condition_211">Thunderstorm</string>
    <string name="condition_212">Heavy Thunderstorm</string>
    <string name="condition_221">Ragged Thunderstorm</string>
    <string name="condition_230">Thunderstorm with Light Drizzle</string>
    <string name="condition_231">Thunderstorm with Drizzle</string>
    <string name="condition_232">Thunderstorm with Heavy Drizzle</string>
    <string name="condition_300">Light Intensity Drizzle</string>
    <string name="condition_301">Drizzle</string>
    <string name="condition_302">Heavy Intensity Drizzle</string>
    <string name="condition_310">Light Intense Drizzle Rain</string>
    <string name="condition_311">Drizzle Rain</string>
    <string name="condition_312">Heavy Intensity Drizzle Rain</string>
    <string name="condition_313">Shower Rain and Drizzle</string>
    <string name="condition_314">Heavy Shower Rain and Drizzle</string>
    <string name="condition_321">Shower Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Intensity Rain</string>
    <string name="condition_503">Very Heavy Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Intensity Shower Rain</string>
    <string name="condition_521">Shower Rain</string>
    <string name="condition_522">Heavy Intensity Shower Rain</string>
    <string name="condition_531">Ragged Shower Rain</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Light Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Light Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Heavy Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust Whirls</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>

</resources>
