<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/location_default"
        android:inputType="text"
        android:key="@string/location_key"
        android:singleLine="true"
        android:title="@string/location_title" />

    <ListPreference
        android:defaultValue="@string/units_metric"
        android:entries="@array/units_options"
        android:entryValues="@array/units_values"
        android:key="@string/units_key"
        android:title="@string/units_title"/>

    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/notification_key"
        android:summaryOn="@string/notification_true"
        android:summaryOff="@string/notification_false"
        android:title="@string/notification_title"
        />

</PreferenceScreen>