<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:paddingTop="16dp">

    <android.support.constraint.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/humidity_title"
        app:layout_constraintBottom_toTopOf="@+id/pressure"
        app:layout_constraintLeft_toLeftOf="@+id/extra_details"
        app:layout_constraintTop_toTopOf="@+id/extra_details"
        app:layout_constraintVertical_bias="0.33"/>

    <TextView
        android:id="@+id/humidity_measurement"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/humidity"
        app:layout_constraintLeft_toLeftOf="@+id/center"
        tools:text="38%"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/pressure_title"
        app:layout_constraintBottom_toBottomOf="@+id/extra_details"
        app:layout_constraintLeft_toLeftOf="@+id/extra_details"
        app:layout_constraintTop_toTopOf="@+id/extra_details"/>

    <TextView
        android:id="@+id/pressure_measurement"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/pressure"
        app:layout_constraintLeft_toLeftOf="@+id/center"
        tools:text="1000 hPa"/>

    <TextView
        android:id="@+id/wind"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/wind_title"
        app:layout_constraintBottom_toBottomOf="@+id/extra_details"
        app:layout_constraintLeft_toLeftOf="@+id/extra_details"
        app:layout_constraintTop_toBottomOf="@+id/pressure"
        app:layout_constraintVertical_bias="0.65999997"/>

    <TextView
        android:id="@+id/wind_measurement"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/wind"
        app:layout_constraintLeft_toLeftOf="@+id/center"
        tools:text="4km/h NW"/>

    </android.support.constraint.ConstraintLayout>

</layout>